--- a/src/Genetic/genetic.html
+++ b/src/Genetic/genetic.html
@@ -37,7 +37,7 @@
                         <a href="#" class="list-link list-link-tree">Дерево решений</a>
                     </li>
                     <li class="list">
-                        <a href="#" class="list-link list-link-neural">Нейроная сеть</a>
+                        <a href="/src/neural/neural network.html" class="list-link list-link-neural">Нейроная сеть</a>
                     </li>
                 </ul>
                 <!-- /.links -->
@@ -60,9 +60,9 @@
         <div class="container">
             <div class="interface-block">
                 <div class="configure">
-                    <button class="button button-style" id="delete">Очистить</button>
                     <button class="button button-style" id="startGenetic">Запуск</button>
                     <button class="button button-style" id="deleteLastButton">Удалить точку</button>
+                    <button class="button button-style" id="delete">Очистить</button>
                 </div>
                 <!-- /.configure -->
                 <div class="field">
@@ -75,7 +75,7 @@
         <!-- /.container -->
     </section>
     <!-- /.interface -->
-    <script src="/src/Genetic/appGenetic/appGenetic.js" type="module"></script>
+    <script src="/src/Genetic/appGenetic/app.js" type="module"></script>
     <script src="/burger.js"></script>
 </body>
 </html>
