--- a/src/Cluster/cluster.html
+++ b/src/Cluster/cluster.html
@@ -37,7 +37,7 @@
                         <a href="#" class="list-link" id="tr">Дерево решений</a>
                     </li>
                     <li class="list">
-                        <a href="#" class="list-link" id="neu">Нейроная сеть</a>
+                        <a href="/src/neural/neural network.html" class="list-link" id="neu">Нейроная сеть</a>
                     </li>
                 </ul>
                 <!-- /.links -->
