--- a/src/ant/ant.html
+++ b/src/ant/ant.html
@@ -37,7 +37,7 @@
                         <a href="#" class="list-link">Дерево решений</a>
                     </li>
                     <li class="list">
-                        <a href="#" class="list-link">Нейроная сеть</a>
+                        <a href="/src/neural/neural network.html" class="list-link">Нейроная сеть</a>
                     </li>
                 </ul>
                 <!-- /.links -->
