fix neural, cluster and ant

--- a/src/neural/neural network.html
+++ b/src/neural/neural network.html
@@ -77,7 +77,7 @@
         <!-- /.container -->
     </section>
     <!-- /.interface -->
-    <script src="/src/neural/toRodion.js"></script>
+    <script src="/src/neural/toRodion.js" type="module"></script>
     <script src="/burger.js"></script>
 </body>
 </html>
