--- a/src/Astar/Astar.html
+++ b/src/Astar/Astar.html
@@ -80,7 +80,7 @@
                     <!-- /.btn -->
                 </div>
                 <!-- /.settings -->
-                <div class="field"></div>
+                <div class="field" id="fil"></div>
                 <!-- /.field -->
             </div>
         </div>
