--- a/src/Cluster/cluster.html
+++ b/src/Cluster/cluster.html
@@ -50,7 +50,7 @@
     <div class="name-page">
         <div class="container">
             <div class="title">
-                <strong class="title-text long">Алгоритм кластеризации(dbscan, k-средних, иерархическая кластеризация)</strong>
+                <strong class="title-text long">Алгоритмы кластеризации(dbscan 🔲 , k-средних ╲, иерархическая кластеризация ◯)</strong>
             </div>
             <!-- /.title -->
         </div>
