adaptable to small screens

--- a/src/Cluster/cluster.html
+++ b/src/Cluster/cluster.html
@@ -65,7 +65,7 @@
                     <button class="button button-style" onclick="clearCanvas()">Очистить</button>
                 </div>
                 <div class="field">
-                    <canvas id="clust-field" width="550" height="550"></canvas>
+                    <canvas id="clust-field"></canvas>
                 </div>
             </div>
         </div>
